@@ -2,6 +2,7 @@
 Revision 0.4.3, released XX-12-2018
 -----------------------------------
 
+- Default daemon syslog service destination to a local socket
 - Updated documentation on daemons command-line options
 - Added `snmpfwd`, `syslog` and `null` destinations to the `logger` plugin,
   most parameters has been defaulted
